[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://addons/arcade_core/ui/TutorialTipModal.gd" id="1"]

[node name="TutorialTipModal" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1")

[node name="Dim" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
color = Color(0, 0, 0, 0.42)

[node name="Center" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Panel" type="PanelContainer" parent="Center"]
custom_minimum_size = Vector2(520, 380)
layout_mode = 2
mouse_filter = 2

[node name="VBox" type="VBoxContainer" parent="Center/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 24.0
offset_top = 24.0
offset_right = -24.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
alignment = 1
theme_override_constants/separation = 14

[node name="Title" type="Label" parent="Center/Panel/VBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Tip"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Message" type="Label" parent="Center/Panel/VBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "This is a tutorial tip."
horizontal_alignment = 1
autowrap_mode = 3

[node name="DoNotShow" type="CheckButton" parent="Center/Panel/VBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Don't show this again"

[node name="Confirm" type="Button" parent="Center/Panel/VBox"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 0
text = "Got it"
custom_minimum_size = Vector2(0, 64)

[connection signal="gui_input" from="Dim" to="." method="_on_dim_gui_input"]
[connection signal="pressed" from="Center/Panel/VBox/Confirm" to="." method="_on_confirm_pressed"]
